--- a/beach_day/beach_day/About.xaml
+++ b/beach_day/beach_day/About.xaml
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="beach_day.About">
+             x:Class="beach_day.About" BackgroundColor="{StaticResource ThemeColor3}">
     <ContentPage.Content>
-        <StackLayout Margin="12">
+        <StackLayout Margin="6" Padding="6">
             <Image Source="beachDayLogo.png" />
 
             <Label Text="Created By: Shane Laskowski"
@@ -11,11 +11,11 @@
                 HorizontalOptions="CenterAndExpand" Style="{StaticResource LabelPageHeading1}"/>
 
             <Label Text="Special thanks to Daniel Causer and Thomas Desmond"
-                VerticalOptions="CenterAndExpand" FontSize="Medium"
+                VerticalOptions="CenterAndExpand" FontSize="Small"
                 HorizontalOptions="CenterAndExpand" Style="{StaticResource LabelPageHeading1}"/>
 
             <Label Text="This app uses the Dark Sky API to retrieve Weather Data"
-                VerticalOptions="CenterAndExpand" FontSize="Medium"
+                VerticalOptions="CenterAndExpand" FontSize="Small"
                 HorizontalOptions="CenterAndExpand" Style="{StaticResource LabelPageHeading1}"/>
 
         </StackLayout>
