--- a/beach_day/beach_day/TanningToolPage.xaml
+++ b/beach_day/beach_day/TanningToolPage.xaml
@@ -1,7 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:xfg="clr-namespace:XFGloss;assembly=XFGloss"
              x:Class="beach_day.TanningToolPage">
+    <xfg:ContentPageGloss.BackgroundGradient>
+        <xfg:Gradient Rotation="45">
+            <xfg:GradientStep StepColor="{StaticResource ThemeColor2}" StepPercentage=".4" />
+            <xfg:GradientStep StepColor="{StaticResource ThemeColor3}" StepPercentage="1" />
+        </xfg:Gradient>
+    </xfg:ContentPageGloss.BackgroundGradient>
+    
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Welcome to Tanning Tool Page!"
