added triggers for all Entry views, added triggers for the Directions and Add Item butttons.  Made it so that the "Today" label and Dark Sky Logo only appear in BeachSelectPage when JSON is successfully recieved.

--- a/beach_day/beach_day/App.xaml
+++ b/beach_day/beach_day/App.xaml
@@ -28,6 +28,14 @@
                 <Setter Property="TextColor" Value="{StaticResource ThemeColor1}" />
             </Style>
 
+            <Style TargetType="Entry">
+                <Style.Triggers>
+                    <Trigger TargetType="Entry" Property="IsFocused" Value="True">
+                        <Setter Property="BackgroundColor" Value="{StaticResource ThemeColor4}" />
+                    </Trigger>
+                </Style.Triggers>
+            </Style>
+            
         </ResourceDictionary>
 
     </Application.Resources>
