created beaches and addBeach template pages.  they sitll need to be implemented.  implemented TanningTool, but still need to fix a few bugs for it.

--- a/beach_day/beach_day/BeachSelectPage.xaml
+++ b/beach_day/beach_day/BeachSelectPage.xaml
@@ -127,7 +127,7 @@
     </ContentPage.Content>
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Add Beach"></ToolbarItem>
+        <ToolbarItem Text="Beaches" Clicked="Toolbar_Beaches_Clicked"></ToolbarItem>
     </ContentPage.ToolbarItems>
 
 </ContentPage>
