--- a/beach_day/beach_day/AddBeachPage.xaml
+++ b/beach_day/beach_day/AddBeachPage.xaml
@@ -2,9 +2,10 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:beach_day"
-             xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
+             xmlns:maps="clr-namespace:Xamarin.Forms.GoogleMaps;assembly=Xamarin.Forms.GoogleMaps"
              x:Class="beach_day.AddBeachPage">
-    
+
+    <!--xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"-->
     <!--The xmlns:local="clr-namespace:beach_day" is needed for the MultiTriggerConverter resource-->
     <ContentPage.Resources>
         <ResourceDictionary>
