added Database for BeachPlace objects.  the application can now retrieve, delete, and add new BeachPlace objects from user input.  Need more testing.  Need More user input checks.  Need to clean up the UI and add ToolTips.  Need to clean up the code.

--- a/beach_day/beach_day/Beaches.xaml
+++ b/beach_day/beach_day/Beaches.xaml
@@ -25,7 +25,7 @@
             <!--<maps:Map WidthRequest="320" HeightRequest="200" x:Name="GoogleMap" IsShowingUser="true"
                   MapType="Hybrid" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3"/> -->
 
-            <Label Text="Beach Address" VerticalOptions="CenterAndExpand" 
+            <Label Text="Insert Geocoded Beach Address Here" VerticalOptions="CenterAndExpand" 
                    HorizontalOptions="CenterAndExpand" Grid.Column="0" Grid.Row="1" 
                    Grid.ColumnSpan="3"/>
 
